Fix border-radius on mobile

--- a/src/styles/PhotoCollage.css
+++ b/src/styles/PhotoCollage.css
@@ -9,14 +9,13 @@
   width: 200px;
   object-fit: cover;
   cursor: pointer;
-  margin: 10px;
-  /* border-radius: 8px; */
+  margin: 1rem;
 }
 
 @media (min-width: 1024px) {
   .photoCollage-container {
-    width: 90%;
-    padding: 40px;
+    width: 80%;
+    padding: 2rem;
   }
 }
 
@@ -24,6 +23,11 @@
   .photoCollage-container img {
     margin: 0;
     width: 33%;
+  }
+}
+
+@media (min-width: 600px) {
+  .photoCollage-container img {
     border-radius: 8px;
   }
 }
